--- a/Staj Proje/index.html
+++ b/Staj Proje/index.html
@@ -324,17 +324,53 @@
                     <div class="slide first">
                         <div class="altKKatman1">
                             <p class="p1">Words truly can't express how grateful I am that a preschool like this exists. I thought that a palce like this was a mythical unicorn that parents searched for, never found.</p>
+                            <table width="50%">
+                                <tr>
+                                    <th rowspan="3"><div style="height: 100px; width: 100px; align-items: center; margin-left: auto; margin-right: auto;"><img src="Gallery/angel-Test.png"style="width: 100%; height: 100%;  border-radius: 100px;" alt=""></div></th>
+                                    <th>Debra Banks</th>
+                                </tr>
+                                <tr>
+                                    <td rowspan="2">Sales Manager</td>
+                                </tr>
+                            </table>
                         </div>
                         <div class="altKKatman2">
                             <p class="p1">I want to this opportunity to thank you and your staff for all you have done for my daughter I am in awe at how much Lauren has grown both emotionally and intellectually since last year.</p>
+                            <table width="50%">
+                                <tr>
+                                    <th rowspan="3"><div style="height: 100px; width: 100px; align-items: center; margin-left: auto; margin-right: auto;"><img src="Gallery/engineer-Test.png"style="width: 100%; height: 100%;  border-radius: 100px;" alt=""></div></th>
+                                    <th>Steven Alvartez</th>
+                                </tr>
+                                <tr>
+                                    <td rowspan="2">Taxi Driver</td>
+                                </tr>
+                            </table>
                         </div>
                     </div>
                     <div class="slide">
                         <div class="altKKatman1">
                             <p class="p1">Words truly can't express how grateful I am that a preschool like this exists. I thought that a palce like this was a mythical unicorn that parents searched for, never found.</p>
+                            <table width="50%">
+                                <tr>
+                                    <th rowspan="3"><div style="height: 100px; width: 100px; align-items: center; margin-left: auto; margin-right: auto;"><img src="Gallery/angel-Test.png"style="width: 100%; height: 100%;  border-radius: 100px;" alt=""></div></th>
+                                    <th>Debra Banks</th>
+                                </tr>
+                                <tr>
+                                    <td rowspan="2">Sales Manager</td>
+                                </tr>
+                            </table>
                         </div>
                         <div class="altKKatman2">
                             <p class="p1">I want to this opportunity to thank you and your staff for all you have done for my daughter I am in awe at how much Lauren has grown both emotionally and intellectually since last year.</p>
+                            <table width="50%">
+                                <tr>
+                                    <th rowspan="3"><div style="height: 100px; width: 100px; align-items: center; margin-left: auto; margin-right: auto;"><img src="Gallery/engineer-Test.png"style="width: 100%; height: 100%;  border-radius: 100px;" alt=""></div></th>
+                                    <th>Steven Alvartez</th>
+                                </tr>
+                                <tr>
+                                    <td rowspan="2">Taxi Driver</td>
+                                </tr>
+                            </table>
                         </div>
                     </div>
                     <div class="navigation-auto">
@@ -350,55 +386,6 @@
         </div>
     </div>
     <!--Altıncı kısım bitim-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
-    <!--GERI DON BURAYA-->
     <div class="yedinciKisim">
         <p class="baslik"><span class="baslik1">Latest</span> News</p>
         <div class="ayrim">
